Fixes some layout bugs in order history single page view refs #502

--- a/skin/frontend/modago/default/sass/design/style/_global.scss
+++ b/skin/frontend/modago/default/sass/design/style/_global.scss
@@ -42,3 +42,11 @@ border-radius: 2px;
 
 	}
 }
+
+.no-border-top {
+    border-top: none;
+}
+
+.rght-margin-30 {
+    margin-right: 30px;
+}
